force-app/main/default/objects/MeterDataSets__x/MeterDataSets__x.object-meta.xml
<CustomObject>
    <description>MeterDataSets</description>
    <externalDataSource>AusNet_OData</externalDataSource>
    <externalName>MeterDataSets</externalName>
    <label>MeterDataSets</label>
    <pluralLabel>MeterDataSets</pluralLabel>
</CustomObject>