force-app/main/default/objects/MeterDataSets__x/fields/CurrentStatus__c.field-meta.xml
<CustomField>
    <fullName>CurrentStatus__c</fullName>
    <description>CurrentStatus</description>
    <externalDeveloperName>CurrentStatus</externalDeveloperName>
    <label>CurrentStatus</label>
    <length>128</length>
    <type>Text</type>
</CustomField>