force-app/main/default/objects/MeterDataSets__x/fields/DeviceType__c.field-meta.xml
<CustomField>
    <fullName>DeviceType__c</fullName>
    <description>DeviceType</description>
    <externalDeveloperName>DeviceType</externalDeveloperName>
    <label>DeviceType</label>
    <length>128</length>
    <type>Text</type>
</CustomField>