force-app/main/default/objects/MeterDataSets__x/fields/InstallTypeCode__c.field-meta.xml
<CustomField>
    <fullName>InstallTypeCode__c</fullName>
    <description>InstallTypeCode</description>
    <externalDeveloperName>InstallTypeCode</externalDeveloperName>
    <label>InstallTypeCode</label>
    <length>128</length>
    <type>Text</type>
</CustomField>