force-app/main/default/objects/MeterDataSets__x/fields/MeterPrefix__c.field-meta.xml
<CustomField>
    <fullName>MeterPrefix__c</fullName>
    <description>MeterPrefix</description>
    <externalDeveloperName>MeterPrefix</externalDeveloperName>
    <label>MeterPrefix</label>
    <length>128</length>
    <type>Text</type>
</CustomField>