force-app/main/default/objects/MeterDataSets__x/fields/MeterProgram__c.field-meta.xml
<CustomField>
    <fullName>MeterProgram__c</fullName>
    <description>MeterProgram</description>
    <externalDeveloperName>MeterProgram</externalDeveloperName>
    <label>MeterProgram</label>
    <length>128</length>
    <type>Text</type>
</CustomField>