force-app/main/default/objects/MeterDataSets__x/fields/Nmi__c.field-meta.xml
<CustomField>
    <fullName>Nmi__c</fullName>
    <description>Nmi</description>
    <externalDeveloperName>Nmi</externalDeveloperName>
    <label>Nmi</label>
    <length>128</length>
    <referenceTargetField>Connection_Point__c.NMI__c</referenceTargetField>
    <referenceTo>Connection_Point__c</referenceTo>
    <relationshipLabel>MeterDataSets</relationshipLabel>
    <relationshipName>MeterDataSets</relationshipName>
    <type>IndirectLookup</type>
</CustomField>