force-app/main/default/objects/MeterDataSets__x/fields/Nmi_Meter__c.field-meta.xml
<CustomField>
    <fullName>Nmi_Meter__c</fullName>
    <description>Nmi_Meter</description>
    <externalDeveloperName>Nmi_Meter</externalDeveloperName>
    <label>Nmi_Meter</label>
    <length>128</length>
    <type>Text</type>
</CustomField>