force-app/main/default/objects/MeterDataSets__x/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <description>SerialNumber</description>
    <externalDeveloperName>SerialNumber</externalDeveloperName>
    <label>SerialNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>